--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,3 +9,21 @@ calendar {
 --cal-header-color: white;
 --cal-header-background-color: rgba(0, 0, 0, 0.3);
 }
+
+html, body, main {
+    height: 100%;
+  }
+
+  .section {
+    min-height: 100vh;
+  }
+  
+  .login-box {
+    border: 1px solid #dbdbdb;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    max-width: 500px;
+    margin: 0 auto;
+    background-color: #c5e6be;
+  }
