--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,25 +10,23 @@
           <h1 class="title has-text-centered">Login Screen</h1>
           <form class="login-form">
             <div class="field">
-              <label class="label">Email</label>
-              <div class="control">
-                <input
-                  class="input"
-                  type="email"
-                  id="email-login"
-                  placeholder="Enter your email"
-                />
+              <div class="field">
+                <label class="label" for="email-signup">Email</label>
+                <div class="control">
+                  <div class="control has-icons-left">
+                    <input class="input" type="email" id="email-signup" name="email-signup"
+                      placeholder="Enter your email address">
+                    <span class="icon is-small is-left">
+                      <i class="fa fa-envelope"></i>
+                    </span>
               </div>
             </div>
             <div class="field">
-              <label class="label">Password</label>
-              <div class="control">
-                <input
-                  class="input"
-                  type="password"
-                  id="password-login"
-                  placeholder="Enter your password"
-                />
+                  <label class="label" for="password-signup">Password</label>
+                  <div class="control has-icons-left">
+                    <input type="password" placeholder="*******" id="password-signup" class="input" required>
+                    <span class="icon is-small is-left">
+                      <i class="fa fa-lock"></i>
               </div>
             </div>
             <div class="field">
